- Implemented: Option to control Meiantech security status
- Implemented: Light Log, Arm/Disarm/Motion/No Motion now also visible in graph
- Implemented: OpenZWave, option to include/exclude nodes, support for windows COM port numbers greater then 9
- Fixed: Razberry, supports now devices with multiple switches (SENSOR_BINARY)
- Changed: Other method to retrieve raspberry pi temperature

Version 1.0.1396 (January 18th 2014)
- Implemented: new commandline option to specify www root folder (-wwwroot)
- Implemented: Limitless/AppLamp, option to set Hue/Brightness in the Edit option
- Implemented: Limitless/AppLamp, can now also be used as 'Dimmer'
- Implemented: Limitless/AppLamp, can now be set to a defined color in scenes/groups/timers
- Fixed: Device/Scene/Group names can now included special characters like %
- Fixed: Edit Users, right combobox did not correctly update when selecting a user
- Fixed: User Devices for Users that did not have 'Shared' rights
- Fixed: Hardware Settings, Domoticz remote server port display
- Changed: Contact notifications now says 'Open/Closed' instead of 'On/Off'
- Fixed: Commandline option for linux now ignores slash character /
- Implemented: various improvements to have Domoticz compile in VS2010 straight from the repository
- Implemented: Windows installer option to install as service (for server implementations, no icons will be installed)
- Implemented: www port can be specified in windows installer
- Implemented: OpenZWave, now possible to set Node configuration settings
- Fixed: Day string logging for the DT1 - RTGR328N device
- Implemented: Dashboard, clicking on a Motion/Dusk/Rain sensor icon will display the log
- Fixed: RFXtrx hardware can now also be compiled/used accross big-little endianess systems